test/manifests/gateway/simple.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: simple-gateway

---
apiVersion: v1
kind: Namespace
metadata:
  name: simple-gateway-no-external-access

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: app
  namespace: simple-gateway
spec:
  gatewayClassName: nginx
  listeners:
    - protocol: HTTP
      port: 80
      name: app
      allowedRoutes:
        namespaces:
          from: Same

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app
  namespace: simple-gateway
spec:
  parentRefs:
    - name: app
  rules:
    - backendRefs:
        - name: app
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app
  namespace: simple-gateway-no-external-access
spec:
  parentRefs:
    - name: app
      namespace: simple-gateway
  rules:
    - backendRefs:
        - name: app
          port: 80

---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: simple-gateway
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: simple-gateway-no-external-access
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: simple-gateway
spec:
  selector:
    matchLabels: # or matchExpressions:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: nginx
